--- a/public/play.html
+++ b/public/play.html
@@ -81,6 +81,8 @@
         padding: 20px;
         overflow-y: auto;
         border-left: 2px solid #ccc;
+        display: flex;
+        flex-direction: column;
       }
 
       .queue-item {
@@ -91,20 +93,30 @@
         color: green;
       }
 
+      #qr-section {
+        margin-top: 20px;
+        padding-top: 20px;
+        border-top: 2px solid #ccc;
+        text-align: center;
+      }
+
+      #qr-section h3 {
+        margin: 0 0 10px 0;
+        color: #333;
+        font-size: 16px;
+      }
+
       #qr-code {
-        position: fixed;
-        bottom: 20px;
-        right: 20px;
+        display: inline-block;
         background: white;
         padding: 10px;
         border: 1px solid #ccc;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
         border-radius: 8px;
-        z-index: 999;
       }
       #qr-code canvas {
-        width: 200px;
-        height: 200px;
+        width: 150px;
+        height: 150px;
       }
 
       #error-message {
@@ -165,6 +177,12 @@
     <div id="queue-section">
       <h2>Queue</h2>
       <div id="queue-list"></div>
+      <div id="qr-section">
+        <h3>Add Songs</h3>
+        <div id="qr-code">
+          <canvas id="qr-canvas"></canvas>
+        </div>
+      </div>
     </div>
     <div id="error-message">
       <h3>Video Cannot Be Embedded</h3>
@@ -317,12 +335,15 @@
       function renderQueue() {
         const list = document.getElementById("queue-list");
         list.innerHTML = "";
-        queue.forEach((item, index) => {
+
+        // Display items in reverse order (newest first)
+        for (let i = queue.length - 1; i >= 0; i--) {
+          const item = queue[i];
           const div = document.createElement("div");
-          div.className = "queue-item" + (index === currentIndex ? " current" : "");
+          div.className = "queue-item" + (i === currentIndex ? " current" : "");
           div.textContent = item.title;
           list.appendChild(div);
-        });
+        }
       }
 
       document.getElementById("next").onclick = () => {
@@ -382,9 +403,6 @@
       // Poll for queue updates every 5 seconds, but don't reload current video
       setInterval(() => refreshQueueAndPlay(0), 5000);
     </script>
-    <div id="qr-code">
-      <canvas id="qr-canvas"></canvas>
-    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrious/4.0.2/qrious.min.js"></script>
     <script>
       window.addEventListener("DOMContentLoaded", () => {
