--- a/public/play.html
+++ b/public/play.html
@@ -133,16 +133,36 @@
         text-align: center;
         display: none;
         z-index: 1000;
+        max-width: 90vw;
+        max-height: 80vh;
+        overflow-y: auto;
+        word-wrap: break-word;
+      }
+
+      #error-message h3 {
+        margin: 0 0 15px 0;
+        font-size: 18px;
+      }
+
+      #error-message p {
+        margin: 10px 0;
+        line-height: 1.4;
       }
 
       #error-message a {
         color: #ff0000;
         text-decoration: none;
         font-weight: bold;
+        display: inline-block;
+        margin-top: 10px;
+        padding: 8px 16px;
+        background: rgba(255, 255, 255, 0.1);
+        border-radius: 4px;
       }
 
       #error-message a:hover {
         text-decoration: underline;
+        background: rgba(255, 255, 255, 0.2);
       }
 
       #queue-error {
@@ -157,11 +177,59 @@
         display: none;
         z-index: 1001;
         max-width: 300px;
+        max-height: 200px;
+        overflow-y: auto;
+        word-wrap: break-word;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      }
+
+      #queue-error strong {
+        display: block;
+        margin-bottom: 8px;
+        font-size: 14px;
+      }
+
+      #queue-error p {
+        margin: 0;
+        line-height: 1.3;
+        font-size: 13px;
       }
 
       #queue-error.show {
         display: block;
+      }
+
+      /* Responsive design for smaller screens */
+      @media (max-width: 768px) {
+        #error-message {
+          max-width: 95vw;
+          max-height: 70vh;
+          padding: 15px;
+          margin: 10px;
+        }
+
+        #error-message h3 {
+          font-size: 16px;
+        }
+
+        #error-message p {
+          font-size: 14px;
+        }
+
+        #queue-error {
+          max-width: 250px;
+          right: 10px;
+          top: 10px;
+          padding: 12px;
+        }
+
+        #queue-error strong {
+          font-size: 13px;
+        }
+
+        #queue-error p {
+          font-size: 12px;
+        }
       }
     </style>
   </head>
