--- a/public/index.html
+++ b/public/index.html
@@ -78,14 +78,30 @@
       }
 
       .error {
+        color: red;
         margin-top: 20px;
         white-space: pre-line;
-        text-align: center;
+        text-align: left;
         width: 100%;
-        display: none;
-        padding: 15px;
-        border-radius: 5px;
+        display: block;
+        padding: 20px 24px;
+        border-radius: 8px;
+        background: #f8d7da;
+        border: 1px solid #f5c6cb;
         font-weight: 500;
+        max-width: 500px;
+        margin-left: auto;
+        margin-right: auto;
+        box-sizing: border-box;
+        word-break: break-word;
+      }
+
+      @media (max-width: 600px) {
+        .error {
+          max-width: 95vw;
+          padding: 12px 8px;
+          font-size: 15px;
+        }
       }
 
       .error.embedding-error {
