--- a/public/index.html
+++ b/public/index.html
@@ -11,20 +11,21 @@
         flex-direction: column;
         align-items: center;
         margin-top: 50px;
-        background-color: #f5f5f5;
+        background-color: #1a1a1a;
+        color: #e0e0e0;
       }
 
       .container {
-        background: white;
+        background: #2d2d2d;
         padding: 30px;
         border-radius: 10px;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
         max-width: 500px;
         width: 100%;
       }
 
       h1 {
-        color: #333;
+        color: #e0e0e0;
         margin-bottom: 30px;
         text-align: center;
       }
@@ -32,11 +33,13 @@
       #youtube-url {
         width: 100%;
         padding: 12px;
-        border: 2px solid #ddd;
+        border: 2px solid #555;
         border-radius: 5px;
         font-size: 16px;
         margin-bottom: 15px;
         box-sizing: border-box;
+        background-color: #1a1a1a;
+        color: #e0e0e0;
       }
 
       #youtube-url:focus {
@@ -61,24 +64,24 @@
       }
 
       #submit-btn:disabled {
-        background-color: #ccc;
+        background-color: #555;
         cursor: not-allowed;
       }
 
       #confirmation {
-        color: #28a745;
+        color: #4ade80;
         font-weight: bold;
         margin-top: 20px;
         padding: 15px;
-        background-color: #d4edda;
-        border: 1px solid #c3e6cb;
+        background-color: #1e3a2e;
+        border: 1px solid #2d5a3d;
         border-radius: 5px;
         text-align: center;
         display: none;
       }
 
       .error {
-        color: red;
+        color: #ff6b6b;
         margin-top: 20px;
         white-space: pre-line;
         text-align: left;
@@ -86,8 +89,8 @@
         display: block;
         padding: 20px 24px;
         border-radius: 8px;
-        background: #f8d7da;
-        border: 1px solid #f5c6cb;
+        background: #3a1f1f;
+        border: 1px solid #5a2f2f;
         font-weight: 500;
         max-width: 500px;
         margin-left: auto;
@@ -105,15 +108,15 @@
       }
 
       .error.embedding-error {
-        background-color: #fff3cd;
-        border: 1px solid #ffeaa7;
-        color: #856404;
+        background-color: #3a2f1f;
+        border: 1px solid #5a4a2f;
+        color: #ffd93d;
       }
 
       .error.general-error {
-        background-color: #f8d7da;
-        border: 1px solid #f5c6cb;
-        color: #721c24;
+        background-color: #3a1f1f;
+        border: 1px solid #5a2f2f;
+        color: #ff6b6b;
       }
 
       .error-icon {
@@ -144,7 +147,7 @@
       }
 
       .error-suggestions {
-        background-color: rgba(255, 255, 255, 0.7);
+        background-color: rgba(45, 45, 45, 0.7);
         padding: 10px;
         border-radius: 4px;
         font-size: 14px;
@@ -166,15 +169,15 @@
         max-width: 500px;
         margin-left: auto;
         margin-right: auto;
-        background: #fafafa;
+        background: #252525;
         border-radius: 8px;
-        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
         padding: 18px 20px 10px 20px;
       }
       #queue-section h2 {
         font-size: 20px;
         margin: 0 0 10px 0;
-        color: #333;
+        color: #e0e0e0;
       }
       #queue-list {
         list-style: none;
@@ -183,9 +186,9 @@
       }
       #queue-list li {
         padding: 8px 0;
-        border-bottom: 1px solid #eee;
+        border-bottom: 1px solid #444;
         font-size: 16px;
-        color: #222;
+        color: #e0e0e0;
       }
       #queue-list li:last-child {
         border-bottom: none;
@@ -265,7 +268,8 @@
 
           if (!response.ok) {
             const data = await response.json();
-            const errorType = data.error && data.error.includes("cannot be embedded") ? "embedding" : "general";
+            // Only show error for private videos or not found - embedding errors are now allowed
+            const errorType = data.type === "private" || data.type === "not-found" ? "general" : "general";
             const errorMessage = data.error || "Failed to add video";
             throw new Error(errorMessage);
           }
@@ -279,12 +283,9 @@
           }, 3000);
           await fetchAndRenderQueue();
         } catch (err) {
-          const errorType = err.message.includes("cannot be embedded")
-            ? "embedding"
-            : err.message.includes("Age-restricted")
-            ? "age-restricted"
-            : err.message.includes("Private")
-            ? "private"
+          // Only show embedding-style error for private/not found videos
+          const errorType = err.message.includes("Private")
+            ? "general"
             : err.message.includes("not found")
             ? "not-found"
             : "general";
@@ -304,19 +305,7 @@
       });
 
       function showError(message, type = "general") {
-        if (type === "embedding" || message.includes("cannot be embedded")) {
-          error.innerHTML = `
-            <div class="error-content">
-              <span class="error-icon">⚠️</span>
-              <div class="error-message">
-                <div class="error-title">Embedding Not Allowed</div>
-                <div class="error-description">Some YouTube channels like Karafun and SingKing do not allow embedding.<br>Try to find your song on a different channel.</div>
-              </div>
-            </div>
-          `;
-        } else {
-          error.textContent = message;
-        }
+        error.textContent = message;
         error.style.display = "block";
         setTimeout(() => {
           hideError();
